feat(JAQPOT-432): add docker model type (#129)
* feat(JAQPOT-432): add docker model type

* feat(JAQPOT-432): add docker model type

* feat: add docker runtime in application runtimes
